Update character sheet component and api routes
